# udpong

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  audio.c  build.bat  build.sh  client.c  game.c  input.c  menu.c  nakama_client.c  network.c  play.sh  render.c  server.c  setup.bat  setup.sh
nakama/: Dockerfile  docker-compose.yml
nakama/modules/go/: go.mod  main.go
